# treema-ai-powered-chat-management-platform-with-ai

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  package.json
backend/Postman/: Treema-Chat-Manager.postman_collection.json
backend/api/: index.js
backend/src/: app.js
backend/src/adapters/: email.adapter.js  telegram.adapter.js  webchat.adapter.js  whatsapp.adapter.js
backend/src/controllers/: auth.controller.js  conversation.controller.js  reply.controller.js  webhook.controller.js
backend/src/middleware/: rateLimit.js
backend/src/models/: Conversation.js  Message.js
backend/src/repositories/: conversation.repo.js  message.repo.js
backend/src/routes/: auth.routes.js  conversation.routes.js  reply.routes.js  webhook.routes.js
backend/src/services/: analysis.service.js  conversation.service.js  message.service.js  router.service.js
backend/src/utils/: normalize.js
frontend/: .gitignore  README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  styles.css
frontend/src/components/: Badge.jsx  ChatHistory.jsx  ConversationCard.jsx  ConversationList.jsx  Header.jsx  LoginPage.jsx  MessageBubble.jsx  (+2 more)
treema-Ai/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  multiagent.ipynb  pyproject.toml  requirements.txt
treema-Ai/api/: index.py  requirements.txt
treema-Ai/app/: api.py
treema-Ai/app/agents/: graph.py  nodes.py  state.py
treema-Ai/app/services/: llm_service.py  rag_service.py
treema-Ai/postman/: Treema-Ai.postman_collection.json
(+7 files in other folders)
