[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0 ; sys_platform == 'darwin'",
    "faiss-cpu>=1.7.4 ; sys_platform != 'darwin'",
    "fastapi>=0.110.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.2.0",
    "textblob>=0.17.1",
    "tiktoken>=0.7.0",
    "uvicorn>=0.29.0",
]
